--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-SHOP_NAME=graphql
-SHOPIFY_ACCESS_TOKEN=dd4d4dc146542ba7763305d71d1b3d38
+SHOP_NAME=king-topaz
+SHOPIFY_ACCESS_TOKEN=7baa217aa0491df08f36820d607b638e
