--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-plugin-root-import": "^2.0.5",
     "gatsby-plugin-sharp": "^2.2.32",
+    "gatsby-plugin-stripe": "^1.2.4",
     "gatsby-source-filesystem": "^2.1.33",
     "gatsby-source-shopify": "^3.0.24",
+    "gatsby-source-stripe": "^3.1.1",
     "gatsby-transformer-sharp": "^2.3.0",
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.19",
